syntax = "proto3";
package pt.tecnico.grpc;


message WriteFileRequest {
	string fileName = 1;
	bytes file = 2;
	string hash = 3;
}

message WriteFileResponse {
	string ack = 1;
}

message ReadFileRequest {
	string fileName = 1;
}

message ReadFileResponse {
	bytes file = 1;

}

message ListFileRequest {
}

message ListFileResponse {
	repeated string fileName = 1;

}

// Request payload
message HelloRequest {
	// Each message attribute is strongly typed.
	// You also must assign a "tag" number.
	// Each tag number is unique within the message.
	string name = 1;

	// This defines a strongly typed list of String
	repeated string hobbies = 2;

	// There are many more basics types, like Enum, Map
	// See https://developers.google.com/protocol-buffers/docs/proto3
	// for more information.
}

message HelloResponse {
	string greeting = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service ClientToServerService {
	// Define a RPC operation
	rpc greeting(HelloRequest) returns (HelloResponse);

	rpc writeFile(WriteFileRequest) returns (WriteFileResponse);
	rpc readFile(ReadFileRequest) returns (ReadFileResponse);
	rpc listFiles(ListFileRequest) returns (ListFileResponse);
}
